--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "homepage": "http://brettgrisinger.com/stage",
   "private": true,
   "dependencies": {
-    "bootstrap": "next",
-    "gsap": "^1.20.2",
-    "history": "^4.6.3",
-    "node-sass-chokidar": "^0.0.3",
-    "npm-run-all": "^4.0.2",
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-brands": "^5.0.6",
+    "@fortawesome/fontawesome-pro-light": "^5.0.6",
+    "@fortawesome/fontawesome-pro-regular": "^5.0.6",
+    "@fortawesome/fontawesome-pro-solid": "^5.0.6",
+    "@fortawesome/react-fontawesome": "^0.0.17",
+    "bootstrap": "^4.0.0-beta.3",
+    "gsap": "^1.20.3",
+    "history": "^4.7.2",
+    "is-touch-device": "^1.0.1",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.2",
     "orbit-controls-es6": "^1.0.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-draggable": "^2.2.6",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.2",
-    "react-router-redux": "next",
-    "react-scripts": "1.0.10",
-    "react-svg": "^2.1.21",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "react-scripts": "^1.0.10",
+    "react-svg": "^2.2.10",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.2",
     "redux-thunk": "^2.2.0",
-    "superagent": "^3.5.2",
+    "superagent": "^3.8.2",
     "three": "^0.86.0",
     "webfontloader": "^1.6.28"
   },
