--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@fortawesome/fontawesome-pro-light": "^5.0.6",
     "@fortawesome/fontawesome-pro-regular": "^5.0.6",
     "@fortawesome/fontawesome-pro-solid": "^5.0.6",
-    "@fortawesome/react-fontawesome": "^0.0.17",
     "bootstrap": "^4.0.0-beta.3",
     "gsap": "^1.20.3",
     "history": "^4.7.2",
@@ -30,6 +29,7 @@
     "redux-thunk": "^2.2.0",
     "superagent": "^3.8.2",
     "three": "^0.86.0",
+    "video-react": "^0.9.4",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
